add sampling history to inlet display

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/saanich-inlet-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/saanich-inlet-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="saanich-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -89,6 +91,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/jervis-inlet-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/jervis-inlet-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="jervis-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -119,6 +123,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/bute-inlet-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/bute-inlet-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="bute-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -149,6 +155,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/knight-inlet-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/knight-inlet-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="knight-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -185,6 +193,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/indian-arm-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/indian-arm-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="indian-arm-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -221,6 +231,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/howe-sound-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/howe-sound-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="howe-sound-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
@@ -257,6 +269,8 @@
 			</ul>
 			<h3>Map and Section</h3>
 			<img src="figures/muchalat-inlet-map.gif">
+			<h3>Sampling History</h3>
+			<img src="figures/muchalat-inlet-samples.png">
 			<h3>Time series of deep water properties<h3>
 			<div id="muchalat-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
