describe which inlet is which in the inlet map

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 		</p>
 		<details>
 			<summary>Click here to view map</summary>
+			<p>
+				The inlets are shown on the map clockwise from the top left
+			</p>
 			<ul>
-				<li>Saanich Inlet</li>
-				<li>Jervis Inlet</li>
-				<li>Bute Inlet</li>
 				<li>Knight Inlet</li>
-				<li>Indian Arm</li>
+				<li>Bute Inlet</li>
+				<li>Jervis Inlet</li>
 				<li>Howe Sound</li>
+				<li>Indian Arm</li>
+				<li>Saanich Inlet</li>
 				<li>Muchalat Inlet</li>
 			</ul>
 			<img src="figures/all-inlets-map.png">
