make image loading lazy

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li>Saanich Inlet</li>
 				<li>Muchalat Inlet</li>
 			</ul>
-			<img src="figures/all-inlets-map.png">
+			<img src="figures/all-inlets-map.png" loading="lazy">
 		</details>
 
 		<div id="averaging-choice" class="tab">
@@ -61,25 +61,25 @@
 				<li>Surface area: 65 km<sup>2</sup></li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/saanich-inlet-map.gif">
+			<img src="figures/saanich-inlet-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/saanich-inlet-samples.png">
+			<img src="figures/saanich-inlet-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="saanich-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/saanich-inlet-temperature-average.png">
+				<img src="figures/saanich-inlet-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/saanich-inlet-salinity-average.png">
+				<img src="figures/saanich-inlet-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/saanich-inlet-oxygen-average.png">
+				<img src="figures/saanich-inlet-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="saanich-inlet-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/saanich-inlet-temperature.png">
+				<img src="figures/saanich-inlet-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/saanich-inlet-salinity.png">
+				<img src="figures/saanich-inlet-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/saanich-inlet-oxygen.png">
+				<img src="figures/saanich-inlet-oxygen.png" loading="lazy">
 			</div>
 		</div>
 
@@ -93,25 +93,25 @@
 				<li>Sill depth: outer basin - 240 m, located at mouth of inlet; inner basin - 219 m, located near Patrick Point; Princess Louisa Inlet - 6 m</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/jervis-inlet-map.gif">
+			<img src="figures/jervis-inlet-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/jervis-inlet-samples.png">
+			<img src="figures/jervis-inlet-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="jervis-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/jervis-inlet-temperature-average.png">
+				<img src="figures/jervis-inlet-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/jervis-inlet-salinity-average.png">
+				<img src="figures/jervis-inlet-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/jervis-inlet-oxygen-average.png">
+				<img src="figures/jervis-inlet-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="jervis-inlet-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/jervis-inlet-temperature.png">
+				<img src="figures/jervis-inlet-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/jervis-inlet-salinity.png">
+				<img src="figures/jervis-inlet-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/jervis-inlet-oxygen.png">
+				<img src="figures/jervis-inlet-oxygen.png" loading="lazy">
 			</div>
 		</div>
 
@@ -125,25 +125,25 @@
 				<li>Sill depth: 370 m, just outside the inlet in Calm Channel</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/bute-inlet-map.gif">
+			<img src="figures/bute-inlet-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/bute-inlet-samples.png">
+			<img src="figures/bute-inlet-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="bute-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/bute-inlet-temperature-average.png">
+				<img src="figures/bute-inlet-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/bute-inlet-salinity-average.png">
+				<img src="figures/bute-inlet-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/bute-inlet-oxygen-average.png">
+				<img src="figures/bute-inlet-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="bute-inlet-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/bute-inlet-temperature.png">
+				<img src="figures/bute-inlet-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/bute-inlet-salinity.png">
+				<img src="figures/bute-inlet-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/bute-inlet-oxygen.png">
+				<img src="figures/bute-inlet-oxygen.png" loading="lazy">
 			</div>
 		</div>
 
@@ -157,25 +157,25 @@
 				<li>Sill depth: inner basin - 48 m located 75 km from the head at Hoeya Head; outer basin - 60 m located at mouth of inlet</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/knight-inlet-map.gif">
+			<img src="figures/knight-inlet-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/knight-inlet-samples.png">
+			<img src="figures/knight-inlet-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="knight-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/knight-inlet-temperature-average.png">
+				<img src="figures/knight-inlet-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/knight-inlet-salinity-average.png">
+				<img src="figures/knight-inlet-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/knight-inlet-oxygen-average.png">
+				<img src="figures/knight-inlet-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="knight-inlet-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/knight-inlet-temperature.png">
+				<img src="figures/knight-inlet-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/knight-inlet-salinity.png">
+				<img src="figures/knight-inlet-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/knight-inlet-oxygen.png">
+				<img src="figures/knight-inlet-oxygen.png" loading="lazy">
 			</div>
 			<div id="knight-inlet-common">
 			</div>
@@ -195,25 +195,25 @@
 				<li>Sill depth: shallow (15 m to 25 m) and 15 km long sill region through Burrard Inlet/Vancouver Harbour</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/indian-arm-map.gif">
+			<img src="figures/indian-arm-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/indian-arm-samples.png">
+			<img src="figures/indian-arm-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="indian-arm-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/indian-arm-temperature-average.png">
+				<img src="figures/indian-arm-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/indian-arm-salinity-average.png">
+				<img src="figures/indian-arm-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/indian-arm-oxygen-average.png">
+				<img src="figures/indian-arm-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="indian-arm-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/indian-arm-temperature.png">
+				<img src="figures/indian-arm-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/indian-arm-salinity.png">
+				<img src="figures/indian-arm-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/indian-arm-oxygen.png">
+				<img src="figures/indian-arm-oxygen.png" loading="lazy">
 			</div>
 			<div id="indian-arm-common">
 			</div>
@@ -233,25 +233,25 @@
 				<li>Sill depth: 73 m, located 18 km from the head, at Defence Islands</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/howe-sound-map.gif">
+			<img src="figures/howe-sound-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/howe-sound-samples.png">
+			<img src="figures/howe-sound-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="howe-sound-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/howe-sound-temperature-average.png">
+				<img src="figures/howe-sound-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/howe-sound-salinity-average.png">
+				<img src="figures/howe-sound-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/howe-sound-oxygen-average.png">
+				<img src="figures/howe-sound-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="howe-sound-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/howe-sound-temperature.png">
+				<img src="figures/howe-sound-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/howe-sound-salinity.png">
+				<img src="figures/howe-sound-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/howe-sound-oxygen.png">
+				<img src="figures/howe-sound-oxygen.png" loading="lazy">
 			</div>
 			<div id="howe-sound-common">
 			</div>
@@ -271,25 +271,25 @@
 				<li>Sill depth: 50 m, located at the mouth</li>
 			</ul>
 			<h3>Map and Section</h3>
-			<img src="figures/muchalat-inlet-map.gif">
+			<img src="figures/muchalat-inlet-map.gif" loading="lazy">
 			<h3>Sampling History</h3>
-			<img src="figures/muchalat-inlet-samples.png">
+			<img src="figures/muchalat-inlet-samples.png" loading="lazy">
 			<h3>Time series of deep water properties<h3>
 			<div id="muchalat-inlet-monthly" class="averaging-content monthly">
 				<h4>Temperature</h4>
-				<img src="figures/muchalat-inlet-temperature-average.png">
+				<img src="figures/muchalat-inlet-temperature-average.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/muchalat-inlet-salinity-average.png">
+				<img src="figures/muchalat-inlet-salinity-average.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/muchalat-inlet-oxygen-average.png">
+				<img src="figures/muchalat-inlet-oxygen-average.png" loading="lazy">
 			</div>
 			<div id="muchalat-inlet-raw" class="averaging-content raw">
 				<h4>Temperature</h4>
-				<img src="figures/muchalat-inlet-temperature.png">
+				<img src="figures/muchalat-inlet-temperature.png" loading="lazy">
 				<h4>Salinity</h4>
-				<img src="figures/muchalat-inlet-salinity.png">
+				<img src="figures/muchalat-inlet-salinity.png" loading="lazy">
 				<h4>Dissolved Oxygen</h4>
-				<img src="figures/muchalat-inlet-oxygen.png">
+				<img src="figures/muchalat-inlet-oxygen.png" loading="lazy">
 			</div>
 		</div>
 
