--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>BC Inlets</title>
+		<title>Deep Water Properties for BC Inlets</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<h1>BC Inlets</h1>
+		<h1>Deep Water Properties for BC Inlets</h1>
 		<p>
 			Below are the time series of deep sea temperature (&deg;C), salinity (PSU), and dissolved oxygen (mL/L) for regions of interest. Click on the tabs to view plots.
 			<br/>
