--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 	<body>
 		<h1>Deep Water Properties for BC Inlets</h1>
 		<p>
-			Below are the time series of deep sea temperature (&deg;C), salinity (PSU), and dissolved oxygen (mL/L) for regions of interest. Click on the tabs to view plots.
-			<br/>
+			Below are the time series of deep sea temperature (&deg;C), salinity (PSU), and dissolved oxygen (mL/L) for a selection of inlets in BC.
+			Click on the tabs to view plots.
+		</p>
+		<p>
 			The time series are coloured by depth category, which is different for each inlet. Each time series displays how depths are sorted.
+		</p>
+		<p id="source-description">
+			Data is taken from the archive at <a href="https://www.waterproperties.org/osd_data_archive">waterproperties.ca</a> and
+			<a href="https://catalogue.cioos.ca/dataset/f239e86c-38d1-4fb2-8b17-acaed794221c">Hakai Water Properties Vertical Profile Data Measures by Oceanographic Profilers, Provisional</a>.
+			This is a mix of netCDF, IOS Shell, and CSV files.
 		</p>
 		<details>
 			<summary>Click here to view map</summary>
