--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		</div>
 		<p id="monthly-description" class="averaging-content monthly">
 			Data is averaged inside individual depth buckets across a month. This produces a maximum of three data points per month, one for each bucket.
+			The average is calculated as the arithmetic mean of all data in a single depth category across a month.
 		</p>
 		<p id="raw-description" class="averaging-content raw">
 			Data is not averaged. All data found is shown, coloured according to its depth.
