move sampling history to annual tab

--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
 			<img src="figures/deep-water-salinity-anomalies.png" loading="lazy">
 			<h3>Dissolved Oxygen Anomalies</h3>
 			<img src="figures/deep-water-oxygen-anomalies.png" loading="lazy">
+			<h2>Sampling History</h2>
+			<h3>Saanich Inlet</h3>
+			<img src="figures/saanich-inlet-samples.png" loading="lazy">
+			<h3>Jervis Inlet</h3>
+			<img src="figures/jervis-inlet-samples.png" loading="lazy">
+			<h3>Bute Inlet</h3>
+			<img src="figures/bute-inlet-samples.png" loading="lazy">
+			<h3>Knight Inlet</h3>
+			<img src="figures/knight-inlet-samples.png" loading="lazy">
+			<h3>Indian Arm</h3>
+			<img src="figures/indian-arm-samples.png" loading="lazy">
+			<h3>Howe Sound</h3>
+			<img src="figures/howe-sound-samples.png" loading="lazy">
+			<h3>Muchalat Inlet</h3>
+			<img src="figures/muchalat-inlet-samples.png" loading="lazy">
 		</div>
 
 		<div class="averaging-content monthly raw">
@@ -83,8 +98,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/saanich-inlet-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/saanich-inlet-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="saanich-inlet-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -115,8 +128,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/jervis-inlet-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/jervis-inlet-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="jervis-inlet-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -147,8 +158,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/bute-inlet-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/bute-inlet-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="bute-inlet-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -179,8 +188,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/knight-inlet-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/knight-inlet-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="knight-inlet-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -211,8 +218,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/indian-arm-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/indian-arm-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="indian-arm-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -243,8 +248,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/howe-sound-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/howe-sound-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="howe-sound-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
@@ -275,8 +278,6 @@
 				</ul>
 				<h3>Map and Section</h3>
 				<img src="figures/muchalat-inlet-map.gif" loading="lazy">
-				<h3>Sampling History</h3>
-				<img src="figures/muchalat-inlet-samples.png" loading="lazy">
 				<h3>Time series of deep water properties<h3>
 				<div id="muchalat-inlet-monthly" class="averaging-content monthly">
 					<h4>Temperature</h4>
