update documentation for adding an inlet

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			The average is calculated as the arithmetic mean of all data considered deep across a month.
 		</p>
 
-		<div class="averaging-content annual">
+		<div id="annual-averaging-content" class="averaging-content annual">
 			<h2>Annual Averages (All Inlets)</h2>
 			<h3>Temperature Averages</h3>
 			<img src="figures/deep-water-temperature-annual-averages.png" loading="lazy">
