add Rivers Inlet

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 			<img src="figures/howe-sound-samples.png" loading="lazy">
 			<h3>Muchalat Inlet</h3>
 			<img src="figures/muchalat-inlet-samples.png" loading="lazy">
+			<h3>Rivers Inlet</h3>
+			<img src="figures/rivers-inlet-samples.png" loading="lazy">
 		</div>
 
 		<div class="averaging-content monthly raw">
@@ -84,6 +86,7 @@
 				<button class="inlet-tablinks" onclick="changeInlet(event, 'indian-arm')">Indian Arm</button>
 				<button class="inlet-tablinks" onclick="changeInlet(event, 'howe-sound')">Howe Sound</button>
 				<button class="inlet-tablinks" onclick="changeInlet(event, 'muchalat-inlet')">Muchalat Inlet</button>
+				<button class="inlet-tablinks" onclick="changeInlet(event, 'rivers-inlet')">Rivers Inlet</button>
 			</div>
 
 			<div id="saanich-inlet" class="inlet-content">
@@ -294,6 +297,36 @@
 					<img src="figures/muchalat-inlet-salinity.png" loading="lazy">
 					<h4>Dissolved Oxygen</h4>
 					<img src="figures/muchalat-inlet-oxygen.png" loading="lazy">
+				</div>
+			</div>
+
+			<div id="rivers-inlet" class="inlet-content">
+				<h2>Rivers Inlet</h2>
+				<h3>Physical Description</h3>
+				<ul>
+					<li>Length: 45 km</li>
+					<li>Maximum depth: 350 m</li>
+					<li>Major basins: one</li>
+					<li>Sill depth: 100 m</li>
+				</ul>
+				<h3>Map and Section</h3>
+				<img src="figures/rivers-inlet-map.gif" loading="lazy">
+				<h3>Time series of deep water properties<h3>
+				<div id="rivers-inlet-monthly" class="averaging-content monthly">
+					<h4>Temperature</h4>
+					<img src="figures/rivers-inlet-temperature-average.png" loading="lazy">
+					<h4>Salinity</h4>
+					<img src="figures/rivers-inlet-salinity-average.png" loading="lazy">
+					<h4>Dissolved Oxygen</h4>
+					<img src="figures/rivers-inlet-oxygen-average.png" loading="lazy">
+				</div>
+				<div id="rivers-inlet-raw" class="averaging-content raw">
+					<h4>Temperature</h4>
+					<img src="figures/rivers-inlet-temperature.png" loading="lazy">
+					<h4>Salinity</h4>
+					<img src="figures/rivers-inlet-salinity.png" loading="lazy">
+					<h4>Dissolved Oxygen</h4>
+					<img src="figures/rivers-inlet-oxygen.png" loading="lazy">
 				</div>
 			</div>
 		</div>
