--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</p>
 		<details>
 			<summary>Click here to view map</summary>
-			<img src="figures/all-inlets-map.png" loading="lazy">
+			<img src="https://api.mapbox.com/styles/v1/cyborgsphinx/cl02pzz5w00k116kdabpiul5x/static/-125,50,6/800x600?access_token=pk.eyJ1IjoiY3lib3Jnc3BoaW54IiwiYSI6ImNsMDJweTU5MTAxemozY3F4N3psem44Mm8ifQ.BCyXz0gxpY2MhF42Om1cjQ" loading="lazy">
 		</details>
 
 		<div id="averaging-choice" class="tab">
