add monthly sampling heatmaps

--- a/index.html
+++ b/index.html
@@ -61,20 +61,44 @@
 			<h2>Sampling History</h2>
 			<h3>Saanich Inlet</h3>
 			<img src="figures/saanich-inlet-samples.png" loading="lazy">
+			<a href="figures/saanich-inlet-monthly-sampling.png">
+				<img src="figures/saanich-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Jervis Inlet</h3>
 			<img src="figures/jervis-inlet-samples.png" loading="lazy">
+			<a href="figures/jervis-inlet-monthly-sampling.png">
+				<img src="figures/jervis-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Bute Inlet</h3>
 			<img src="figures/bute-inlet-samples.png" loading="lazy">
+			<a href="figures/bute-inlet-monthly-sampling.png">
+				<img src="figures/bute-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Knight Inlet</h3>
 			<img src="figures/knight-inlet-samples.png" loading="lazy">
+			<a href="figures/knight-inlet-monthly-sampling.png">
+				<img src="figures/knight-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Indian Arm</h3>
 			<img src="figures/indian-arm-samples.png" loading="lazy">
+			<a href="figures/indian-arm-monthly-sampling.png">
+				<img src="figures/indian-arm-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Howe Sound</h3>
 			<img src="figures/howe-sound-samples.png" loading="lazy">
+			<a href="figures/howe-sound-monthly-sampling.png">
+				<img src="figures/howe-sound-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Muchalat Inlet</h3>
 			<img src="figures/muchalat-inlet-samples.png" loading="lazy">
+			<a href="figures/muchalat-inlet-monthly-sampling.png">
+				<img src="figures/muchalat-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 			<h3>Rivers Inlet</h3>
 			<img src="figures/rivers-inlet-samples.png" loading="lazy">
+			<a href="figures/rivers-inlet-monthly-sampling.png">
+				<img src="figures/rivers-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+			</a>
 		</div>
 
 		<div class="averaging-content monthly raw">
