--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
 				<h2>Douglas Channel</h2>
 				<h3>Physical Description</h3>
 				<ul>
-					<li>Maximum depth: 700 m</li>
+					<li>Length: 83 km</li>
+					<li>Maximum depth: 455 m</li>
 					<li>Sill depth: 200 m</li>
 				</ul>
 				<h3>Map and Section</h3>
