split annual charts by geographic area

--- a/index.html
+++ b/index.html
@@ -45,26 +45,78 @@
 		</p>
 
 		<div id="annual-averaging-content" class="averaging-content annual">
-			<h2>Annual Averages (All Inlets)</h2>
-			<h3>Temperature Averages</h3>
-			<img src="figures/deep-water-temperature-annual-averages-part1.png" loading="lazy">
-			<img src="figures/deep-water-temperature-annual-averages-part2.png" loading="lazy">
-			<h3>Salinity Averages</h3>
-			<img src="figures/deep-water-salinity-annual-averages-part1.png" loading="lazy">
-			<img src="figures/deep-water-salinity-annual-averages-part2.png" loading="lazy">
-			<h3>Dissolved Oxygen Averages</h3>
-			<img src="figures/deep-water-dissolved-oxygen-annual-averages-part1.png" loading="lazy">
-			<img src="figures/deep-water-dissolved-oxygen-annual-averages-part2.png" loading="lazy">
-			<h2>Annual Anomalies (All Inlets)</h2>
-			<h3>Temperature Anomalies</h3>
-			<img src="figures/deep-water-temperature-anomalies-part1.png" loading="lazy">
-			<img src="figures/deep-water-temperature-anomalies-part2.png" loading="lazy">
-			<h3>Salinity Anomalies</h3>
-			<img src="figures/deep-water-salinity-anomalies-part1.png" loading="lazy">
-			<img src="figures/deep-water-salinity-anomalies-part2.png" loading="lazy">
-			<h3>Dissolved Oxygen Anomalies</h3>
-			<img src="figures/deep-water-dissolved-oxygen-anomalies-part1.png" loading="lazy">
-			<img src="figures/deep-water-dissolved-oxygen-anomalies-part2.png" loading="lazy">
+			<h2>Annual Averages (Salish Sea)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-annual-averages-salish-sea.png">
+					<img src="figures/deep-water-temperature-annual-averages-salish-sea.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-annual-averages-salish-sea.png">
+					<img src="figures/deep-water-salinity-annual-averages-salish-sea.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-annual-averages-salish-sea.png">
+					<img src="figures/deep-water-dissolved-oxygen-annual-averages-salish-sea.png" loading="lazy">
+				</a>
+			</div>
+			<h2>Annual Averages (North Mainland Coast)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-annual-averages-north-mainland-coast.png">
+					<img src="figures/deep-water-temperature-annual-averages-north-mainland-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-annual-averages-north-mainland-coast.png">
+					<img src="figures/deep-water-salinity-annual-averages-north-mainland-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-annual-averages-north-mainland-coast.png">
+					<img src="figures/deep-water-dissolved-oxygen-annual-averages-north-mainland-coast.png" loading="lazy">
+				</a>
+			</div>
+			<h2>Annual Averages (West Vancouver Island Coast)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-annual-averages-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-temperature-annual-averages-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-annual-averages-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-salinity-annual-averages-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-annual-averages-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-dissolved-oxygen-annual-averages-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+			</div>
+			<h2>Annual Anomalies (Salish Sea)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-anomalies-salish-sea.png">
+					<img src="figures/deep-water-temperature-anomalies-salish-sea.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-anomalies-salish-sea.png">
+					<img src="figures/deep-water-salinity-anomalies-salish-sea.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-anomalies-salish-sea.png">
+					<img src="figures/deep-water-dissolved-oxygen-anomalies-salish-sea.png" loading="lazy">
+				</a>
+			</div>
+			<h2>Annual Anomalies (North Mainland Coast)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-anomalies-north-mainland-coast.png">
+					<img src="figures/deep-water-temperature-anomalies-north-mainland-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-anomalies-north-mainland-coast.png">
+					<img src="figures/deep-water-salinity-anomalies-north-mainland-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-anomalies-north-mainland-coast.png">
+					<img src="figures/deep-water-dissolved-oxygen-anomalies-north-mainland-coast.png" loading="lazy">
+				</a>
+			</div>
+			<h2>Annual Anomalies (West Vancouver Island Coast)</h2>
+			<div class="annual-plots">
+				<a href="figures/deep-water-temperature-anomalies-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-temperature-anomalies-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-salinity-anomalies-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-salinity-anomalies-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+				<a href="figures/deep-water-dissolved-oxygen-anomalies-west-vancouver-island-coast.png">
+					<img src="figures/deep-water-dissolved-oxygen-anomalies-west-vancouver-island-coast.png" loading="lazy">
+				</a>
+			</div>
 		</div>
 
 		<div id="sampling-history-content" class="averaging-content sampling">
@@ -72,47 +124,47 @@
 			<h3>Saanich Inlet</h3>
 			<img src="figures/saanich-inlet-samples.png" loading="lazy">
 			<a href="figures/saanich-inlet-monthly-sampling.png">
-				<img src="figures/saanich-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/saanich-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Jervis Inlet</h3>
 			<img src="figures/jervis-inlet-samples.png" loading="lazy">
 			<a href="figures/jervis-inlet-monthly-sampling.png">
-				<img src="figures/jervis-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/jervis-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Bute Inlet</h3>
 			<img src="figures/bute-inlet-samples.png" loading="lazy">
 			<a href="figures/bute-inlet-monthly-sampling.png">
-				<img src="figures/bute-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/bute-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Knight Inlet</h3>
 			<img src="figures/knight-inlet-samples.png" loading="lazy">
 			<a href="figures/knight-inlet-monthly-sampling.png">
-				<img src="figures/knight-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/knight-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Indian Arm</h3>
 			<img src="figures/indian-arm-samples.png" loading="lazy">
 			<a href="figures/indian-arm-monthly-sampling.png">
-				<img src="figures/indian-arm-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/indian-arm-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Howe Sound</h3>
 			<img src="figures/howe-sound-samples.png" loading="lazy">
 			<a href="figures/howe-sound-monthly-sampling.png">
-				<img src="figures/howe-sound-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/howe-sound-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Muchalat Inlet</h3>
 			<img src="figures/muchalat-inlet-samples.png" loading="lazy">
 			<a href="figures/muchalat-inlet-monthly-sampling.png">
-				<img src="figures/muchalat-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/muchalat-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Rivers Inlet</h3>
 			<img src="figures/rivers-inlet-samples.png" loading="lazy">
 			<a href="figures/rivers-inlet-monthly-sampling.png">
-				<img src="figures/rivers-inlet-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/rivers-inlet-monthly-sampling.png" loading="lazy">
 			</a>
 			<h3>Douglas Channel</h3>
 			<img src="figures/douglas-channel-samples.png" loading="lazy">
 			<a href="figures/douglas-channel-monthly-sampling.png">
-				<img src="figures/douglas-channel-monthly-sampling.png" width="800" height="200" loading="lazy">
+				<img src="figures/douglas-channel-monthly-sampling.png" loading="lazy">
 			</a>
 		</div>
 
