--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
 		<div id="averaging-choice" class="tab">
 			<button class="averaging-tablinks" onclick="changeAveraging(event, 'annual')">Annual Averages &amp; Anomalies Time Series</button>
-			<button class="averaging-tablinks" onclick="changeAveraging(event, 'monthly')" id="averaging-default">Monthly Averages</button>
+			<button class="averaging-tablinks" onclick="changeAveraging(event, 'monthly')" id="averaging-default">Monthly Averages Time Series</button>
 			<button class="averaging-tablinks" onclick="changeAveraging(event, 'raw')">Raw Data</button>
 			<button class="averaging-tablinks" onclick="changeAveraging(event, 'sampling')">Sampling History</button>
 		</div>
 		<p id="monthly-description" class="averaging-content monthly">
-			Data is averaged inside individual depth buckets across a month. This produces a maximum of three data points per month, one for each bucket.
-			The average is calculated as the arithmetic mean of all data in a single depth category across a month.
+			Arithmetic means of deep water properties were calculated for each data file/profile over predefined depth intervals, and then across each month for monthly averages.
+			Monthly averages time series of temperature, salinity, and dissolved oxygen for individual inlets are shown below.
 		</p>
 		<p id="raw-description" class="averaging-content raw">
 			Data is not averaged. All data found is shown, coloured according to its depth.
